# airbnb_backend_clone

./: .gitignore  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
airbnb-clone-backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
airbnb-clone-backend/bookings/: admin.py  serializer.py
airbnb-clone-backend/bookings/migrations/: 0002_initial.py  0003_initial.py
airbnb-clone-backend/categories/: admin.py  views.py
airbnb-clone-backend/common/: models.py
airbnb-clone-backend/config/: authentication.py  settings.py  urls.py
airbnb-clone-backend/direct_messages/: admin.py
airbnb-clone-backend/experiences/: models.py
airbnb-clone-backend/experiences/migrations/: 0001_initial.py  0002_initial.py
airbnb-clone-backend/medias/: urls.py  views.py
airbnb-clone-backend/medias/migrations/: 0002_initial.py  0003_alter_photo_file_alter_video_file.py
airbnb-clone-backend/reviews/: admin.py  models.py
airbnb-clone-backend/reviews/migrations/: 0001_initial.py
airbnb-clone-backend/rooms/: models.py  urls.py
airbnb-clone-backend/rooms/migrations/: 0001_initial.py  0002_initial.py
airbnb-clone-backend/users/: admin.py
airbnb-clone-backend/users/migrations/: 0002_alter_user_avartar.py
airbnb-clone-backend/wishlists/: admin.py  urls.py
airbnb-clone-backend/wishlists/migrations/: 0001_initial.py
bookings/: models.py  serializer.py
bookings/migrations/: 0001_initial.py  0002_initial.py  (+3 more)
categories/: models.py  urls.py
config/: settings.py  urls.py
direct_messages/: models.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
houses/: admin.py  models.py
medias/: admin.py  models.py
nginx/: Dockerfile  default.conf  nginx.conf
reviews/: models.py  serializers.py
rooms/: admin.py  models.py  serializer.py  urls.py  views.py
users/: models.py  serializer.py  urls.py  views.py
wishlists/: models.py  serializer.py  urls.py  views.py
(+35 files in other folders)
